--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -1,9 +1,17 @@
-- Season: "2021-2022"
+- Season: "2022-2023"
   current: true
   concerts:
+  - date: "April 23, 2023"
+    current: true
+    time: "3pm"
+    location: "Salvation Army Torrance Chapel"
+    pdf: "concerts/2022_23/2023_04-11.pdf"
+    title: "Autumn into Winter"
+    mapLink: https://www.google.com/maps/place/4223+Emerald+St,+Torrance,+CA+90503/@33.8419126,-118.360556,17z/data=!4m5!3m4!1s0x80c2b4ce2cc5aa61:0x6abc70f83a67c2f1!8m2!3d33.8419126!4d-118.3583673
+    address: 4223 Emerald St, Torrance, CA
+- Season: "2021-2022"
+  concerts:
   - date: "November 27, 2022"
-    current: true
-    current: true
     time: "3pm"
     location: "Manhattan Beach Community Church"
     mapLink: https://goo.gl/maps/upec1jShfgghVc797
