Update concerts.yml - update title

--- a/_data/concerts.yml
+++ b/_data/concerts.yml
@@ -5,7 +5,7 @@
     current: true
     time: "3pm"
     location: "Salvation Army Torrance Chapel"
-    title: "Concerts in the Park"
+    title: "This is U.S."
     pdf: "concerts/2022_23/2024_11.pdf"
     mapLink: https://maps.app.goo.gl/RKZVxSMEtapQbhDW9
     address: 4223 Emerald St, Torrance, CA
